--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  background: linear-gradient(90deg,rgba(8, 255, 65, 1) 0%, rgba(88, 156, 30, 1) 100%);
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
